fix [MOBILE][LOCATIONFEED][SCROLL]: fixed scroll bar showing on mobile

--- a/src/app/pages/location-feed/location-feed.component.scss
+++ b/src/app/pages/location-feed/location-feed.component.scss
@@ -3,9 +3,9 @@
 
 app-map {
   // max-height: calc(100vh - 50px - 61.22px);
-  border: 2px solid red;
+  // border: 2px solid red;
   display: block;
-  height: 80vh;
+  height: 75vh;
 }
 
 
